# Requirements

./: pyproject.toml
.github/: dependabot.yml
